--- a/imageeditengine/build.gradle
+++ b/imageeditengine/build.gradle
@@ -4,18 +4,7 @@ android {
   compileSdkVersion 26
   buildToolsVersion '27.0.3'
 
-  task ndkBuild(type: Exec, description: 'run ndk-build') {
-    if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
-      workingDir 'src/main/jni'
-      commandLine 'ndk-build.cmd', '-j', Runtime.runtime.availableProcessors()
-    } else {
-      workingDir 'src/main/jni'
-      commandLine 'ndkbuild', '-j', Runtime.runtime.availableProcessors()
-    }
-  }
-
-  tasks.withType(JavaCompile) { compileTask -> compileTask.dependsOn(ndkBuild)
-  }
+  
 
   defaultConfig {
     minSdkVersion 16
@@ -27,9 +16,11 @@ android {
       moduleName "photoprocessing"
     }
   }
-  sourceSets.main {
-    jni.srcDirs = []
-    jniLibs.srcDir 'src/main/libs'
+  
+  externalNativeBuild {
+    ndkBuild {
+      path "src/main/jni/Android.mk"
+    }
   }
 
   buildTypes {
